// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should contain failed 1`] = `
<div>
  <i>
    <svg
      aria-label="failed"
      class="failed statusicon"
      fill="currentColor"
      height="1em"
      role="img"
      version="1.1"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M3.72 3.72a.75.75 0 011.06 0L8 6.94l3.22-3.22a.75.75 0 111.06 1.06L9.06 8l3.22 3.22a.75.75 0 11-1.06 1.06L8 9.06l-3.22 3.22a.75.75 0 01-1.06-1.06L6.94 8 3.72 4.78a.75.75 0 010-1.06z"
        fill-rule="evenodd"
      />
    </svg>
  </i>
  failed
</div>
`;

exports[`Should contain passed 1`] = `
<div>
  <i>
    <svg
      aria-label="passed"
      class="passed statusicon"
      fill="currentColor"
      height="1em"
      role="img"
      version="1.1"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M13.78 4.22a.75.75 0 010 1.06l-7.25 7.25a.75.75 0 01-1.06 0L2.22 9.28a.75.75 0 011.06-1.06L6 10.94l6.72-6.72a.75.75 0 011.06 0z"
        fill-rule="evenodd"
      />
    </svg>
  </i>
  passed
</div>
`;

exports[`Should contain pending 1`] = `
<div>
  <i>
    <svg
      aria-hidden="true"
      class="pending statusicon"
      fill="currentColor"
      height="1em"
      version="1.1"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 4a4 4 0 100 8 4 4 0 000-8z"
        fill-rule="evenodd"
      />
    </svg>
  </i>
  pending
</div>
`;

exports[`Should contain todo 1`] = `
<div>
  <i>
    <svg
      aria-hidden="true"
      class="todo statusicon"
      fill="currentColor"
      height="1em"
      version="1.1"
      viewBox="0 0 16 16"
      width="1em"
    >
      <path
        d="M8 4a4 4 0 100 8 4 4 0 000-8z"
        fill-rule="evenodd"
      />
    </svg>
  </i>
  todo
</div>
`;
